[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "blocking", "cookies" ] }
lazy_static = "1.4.0"
subtle = "2.4"

[[bin]]
name = "day1"
path = "src/day1.rs"